--- a/html/mapautm.html
+++ b/html/mapautm.html
@@ -4,54 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mapa Universitario</title>
-  <link rel="stylesheet" href="/mapautm.css">
-  <style>
-    /* Estilos para la tarjeta */
-    .card {
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      padding: 32px; /* Aumenta el relleno para hacer la tarjeta más grande */
-      max-width: 1200px; /* Aumenta el ancho máximo de la tarjeta */
-      margin: 20px auto;
-      background-color: #fff;
-    }
+  <link rel="stylesheet" href="/css/mapautm.css">
 
-    .map-container {
-      text-align: center;
-    }
-
-    .map-image {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-    }
-
-    .button-grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 10px;
-      margin-top: 16px;
-    }
-
-    .map-button {
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      background-color: #007bff;
-      color: white;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .map-button:hover {
-      background-color: #0056b3;
-    }
-
-    .highlighted {
-      background-color: #ffc107; /* Color diferente para el botón destacado */
-    }
-  </style>
 </head>
 <body>
 
