--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 
@@ -37,7 +37,7 @@
                     <span>Password</span>
                 </div>
 
-                <a href="/mapautm.html">
+                <a href="/html/mapautm.html">
                     <button class="enter">Enter</button>
                 </a>
                                         <!-- Botón de Modo Claro/Oscuro -->
@@ -61,4 +61,4 @@
 </body>
 </html>
 
-<script src="/script.js"></script>
+<script src="/script/script.js"></script>
