--- a/html/mapautm.html
+++ b/html/mapautm.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mapa Universitario</title>
-  <link rel="stylesheet" href="/css/mapautm.css">
+  <link rel="stylesheet" href="css/mapautm.css">
 
 </head>
 <body>
