--- a/html/mapautm.html
+++ b/html/mapautm.html
@@ -14,7 +14,7 @@
     <!-- Contenedor principal -->
     <div class="map-container">
       <!-- Imagen del mapa -->
-      <img src="/imagenes/mapa.png" alt="Mapa de la Universidad" class="map-image">
+      <img src="imagenes/mapa.png" alt="Mapa de la Universidad" class="map-image">
 
       <!-- Botones -->
       <div class="button-grid">
