--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <span>Password</span>
                 </div>
 
-                <a href="html/mapautm.html">
+                <a href="mapautm.html">
                     <button class="enter">Enter</button>
                 </a>
                                         <!-- Botón de Modo Claro/Oscuro -->
